syntax = "proto3";

service ClientServerComms {
	rpc SignUp(SignUpRequest) returns (SignUpResponse);
	rpc SignUpChallengeResponse(SignUpChallengeResponseRequest);
	rpc Login(LoginRequest);
	rpc FindUser(FindUserRequest) returns (FindUserResponse);
}

message SignUpRequest{
	string username = 1;
	bytes publicKey = 2;
}

message SignUpResponse{
	fixed64 challenge = 1;
}

message SignUpChallengeResponseRequest{
	fixed64 challenge_response = 1;
}

message LoginRequest{
	string username = 1;
	fixed32 address = 2;
	bytes digitalSignature = 3;
}

message FindUserRequest{
	string username = 1;
	bytes digitalSignature = 2;
}

message FindUserResponse{
	string username = 1;
	fixed32 address = 2;
}